[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scripts/tools/viewmodel_editor.gd" id="1"]

[sub_resource type="Environment" id="Environment_1"]
background_mode = 1
background_color = Color(0.2, 0.2, 0.25, 1)
ambient_light_source = 2
ambient_light_color = Color(0.5, 0.5, 0.5, 1)

[node name="ViewmodelEditor" type="Node3D"]
script = ExtResource("1")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1)
fov = 70.0

[node name="WeaponHolder" type="Node3D" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_1")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.707107, 0.707107, 0, -0.707107, 0.707107, 0, 3, 0)
light_energy = 1.2

[node name="FillLight" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.866025, -0.5, 0, 0.5, 0.866025, 0, -1, 2)
light_energy = 0.4

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Crosshair" type="Control" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -10.0
offset_top = -10.0
offset_right = 10.0
offset_bottom = 10.0
grow_horizontal = 2
grow_vertical = 2

[node name="CrosshairH" type="ColorRect" parent="CanvasLayer/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -1.0
offset_right = 8.0
offset_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.8)

[node name="CrosshairV" type="ColorRect" parent="CanvasLayer/Crosshair"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1.0
offset_top = -8.0
offset_right = 1.0
offset_bottom = 8.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 1, 1, 0.8)

[node name="PositionPanel" type="PanelContainer" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 10.0
offset_right = 300.0
offset_bottom = 200.0

[node name="PositionLabel" type="Label" parent="CanvasLayer/PositionPanel"]
layout_mode = 2
text = "VIEWMODEL EDITOR

Position:
Vector3(0.000, 0.000, 0.000)

Rotation:
Vector3(0.0, 0.0, 0.0)

Scale:
Vector3(1.00, 1.00, 1.00)"

[node name="InstructionsPanel" type="PanelContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -260.0
offset_top = 10.0
offset_right = -10.0
offset_bottom = 300.0
grow_horizontal = 0

[node name="InstructionsLabel" type="Label" parent="CanvasLayer/InstructionsPanel"]
layout_mode = 2
text = "CONTROLS

WASD - Move
Q/E - Up/Down
Arrows - Rotate
+/- - Scale
Shift - Fine
R - Reset
C - Copy"

[node name="WeaponSelector" type="OptionButton" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 210.0
offset_right = 300.0
offset_bottom = 240.0

[node name="CopyButton" type="Button" parent="CanvasLayer"]
offset_left = 10.0
offset_top = 250.0
offset_right = 200.0
offset_bottom = 290.0
text = "COPY VALUES TO CLIPBOARD"

[node name="CopyFeedback" type="Label" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -150.0
offset_top = -100.0
offset_right = 150.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 1, 0, 1)
theme_override_font_sizes/font_size = 16
text = "COPIED!"
horizontal_alignment = 1
vertical_alignment = 1
visible = false
